chap 3 and begin 4

--- a/1intro.tex
+++ b/1intro.tex
@@ -1,12 +1,12 @@
 \chapter*{Introduction}
+\markboth{Introduction}{Introduction}
 \label{cha:introduction}
 \addcontentsline{toc}{chapter}{Introduction}  
-
 
 %---------------------------------------------------------------------------
 
 
-The aim of this work is to design and implement a mobile manipulation robotic platform with a basic vision system for object recognition with a three dimensional camera. This work is a part of a project named "Mobile set of manipulators on a wheeled chassis". The project was realized in a three person team, as part of the Second Edition of ABB Students Scientific Association programme organized by ABB Corporate Research Center in Cracow.
+The aim of this work is to design and implement a mobile manipulation robotic platform with a vision system for obstacle detection and object recognition with a three dimensional camera. This work is a part of a project named "Mobile set of manipulators on a wheeled chassis". The project was realized in a three person team, as part of the Second Edition of ABB Students Scientific Association programme organized by ABB Corporate Research Center in Cracow.
 
 	In the first chapter, a design of the robotic system is presented. General concept of mobile manipulation is described and possible application areas are mentioned. Subsequently, design requirements, selected hardware components, and implemented software architecture is described. The second chapter provides information about modern depth map acquisition techniques, including stereo, time-of-flight and structured light cameras. For each method, its operation principle basics and general advantages and disadvantages are provided. The third section is focused on modern methods of depth image analysis. Concepts of point clouds and point descriptors are introduced. Moreover, general object-recognition pipeline is provided.
 	
