--- a/3rozdzial2.tex
+++ b/3rozdzial2.tex
@@ -92,7 +92,7 @@ Wavelengths vary to suit the target: from about 10 micrometers to the UV (approx
 \end{comment}
 %---------------------------------------------------------------------------
 
-\section{Time-of-flight}
+\section{Time of flight}
 \label{sec:tof}
 
 \begin{comment}
