--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -20,17 +20,32 @@ organization = {Ada Europe},
 year = {2006}
 }
 
-@Article{BuDo03,
-author = {Burns, A. and Dobbing, B.},
-title = {The {R}avenscar {P}rofile for Real--Time and High Integrity Systems},
-journal = {Cross{T}alk},
-year = {2003},
-volume = {16},
-number = {11},
-pages = {9-12}
+@article{AldomaMTWPZRGV12,
+  author = {Aldoma, Aitor and Marton, Zoltan-Csaba and Tombari, Federico and Wohlkinger, Walter and Potthast, Christian and Zeisl, Bernhard and Rusu, Radu Bogdan and Gedikli, Suat and Vincze, Markus},
+  journal = {IEEE Robot. Automat. Mag.},
+  number = 3,
+  pages = {80-91},
+  title = {{Tutorial: Point Cloud Library: Three-Dimensional Object Recognition and 6 DOF Pose Estimation.}},
+  volume = 19,
+  year = 2012
+}
+
+@InProceedings{Rusu_ICRA2011_PCL,
+  author    = {Radu Bogdan Rusu and Steve Cousins},
+  title     = {{3D is here: Point Cloud Library (PCL)}},
+  booktitle = {{IEEE International Conference on Robotics and Automation (ICRA)}},
+  month     = {May 9-13},
+  year      = {2011},
+  address   = {Shanghai, China}
 }
 
 
+@INPROCEEDINGS{Rusu09fastpoint,
+    author = {Radu Bogdan Rusu and Nico Blodow and Michael Beetz},
+    title = {Fast Point Feature Histograms (FPFH) for 3D Registration},
+    booktitle = {{IEEE International Conference on Robotics and Automation (ICRA)}},
+    year = {2009}
+}
 
 @InProceedings{PeDa04,
 author = {Peleska, J. and Große, D. and Haxthausen, A. E. and Drechsler, R.},
