--- a/praca.tex
+++ b/praca.tex
@@ -9,6 +9,7 @@
 \usepackage{verbatim}
 \usepackage{booktabs}
 \usepackage{mathtools}
+\usepackage{textcomp}
 \usepackage{amssymb}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{siunitx}
@@ -37,7 +38,7 @@
 }
 
 \usepackage{tikz}
-\usetikzlibrary{arrows,shapes,positioning,shadows,trees}
+\usetikzlibrary{arrows,automata,shapes,positioning,shadows,trees}
 
 
 %---------------------------------------------------------------------------
