--- a/5rozdzial4.tex
+++ b/5rozdzial4.tex
@@ -1,145 +1,171 @@
 \chapter{Implementation and testing}
 \label{cha:implandtest}
 
+A MMS robot equipped with a depth acquisition system is a particularly well suited tool to perform tasks with a high degree of autonomy. The high volume of environmental information provided by a depth sensor allows the robot to successfully operate in an unstructured and changing environment without human guidance. In this work, the task which the robot has to solve fully autonomously is the problem of finding a predefined object in its working environment. This problem required implementing two mechanisms for depth data processing. The first was the detection of obstacles, in order to ensure save movement of the mobile platform and the second one was the recognition of the object to accomplish the final task. The Point Cloud Library (PCL) \cite{Rusu_ICRA2011_PCL} was used to implement the depth data analysis on the robot. PCL is an open source project for 3D point cloud processing. The library contains a vast array of state-of-the-art algorithms for filtering, feature estimation, segmentation, registration and model fitting. A detailed description of the developed autonomous control mode is provided in the following sections.
+
 %---------------------------------------------------------------------------
 
 \section{Hardware setting}
 \label{sec:setting}
 
-\usetikzlibrary{patterns}
-\usetikzlibrary{calc}
-\usetikzlibrary{decorations.pathmorphing}
+The first issue encountered during the development of the autonomous mode was adequate positioning of the depth camera. As mentioned in section \ref{sec:3dsum}, the selected RGB-D sensor, Asus Xtion Pro operating range starts from $0.8m$, which is a relatively high distance compared to the dimensions of the whole robot. For this reason, the camera position and field of view determines the size of objects that can be used as targets. 	Moreover, the RGB-D camera location is also crucial during obstacle detection. The system should be able to determine whether it is possible to displace an entire width of the platform forward. While moving ahead, the analysed area is desired to be large enough that the robot could react to obstacle on time and avoid collision. On the other hand, the region close to the front of the platform should also be examined, as obstacles are likely to occur there during turning.
 
-\newcommand{\nvar}[2]{%
-    \newlength{#1}
-    \setlength{#1}{#2}
-}
-
-% Define a few constants for drawing
-\nvar{\dg}{0.3cm}
-\def\dw{0.25}\def\dh{1.3}
-\nvar{\ddx}{1.5cm}
-
-% Define commands for links, joints and such
-\def\link{\draw [double distance=1.5mm, thick] (0,0)--}
-\def\joint{%
-    \filldraw [fill=white] (0,0) circle (5pt);
-    \fill[black] circle (2pt);
-}
-\def\grip{%
-	
-    \filldraw [fill=white, thick] (0cm,\dg) rectangle (3mm,-\dg);    
-    
-    %\draw[ultra thick](0cm,\dg)--(0cm,-\dg)--(3mm,-\dg)--(3mm,\dg) -- cycle;
-    \fill (1.5mm, -\dg) -- +(-1.5mm,-1.5mm) -- +(1.5mm,-1.5mm);
-    %\fill (0cm, -0.5\dg)+(0cm,1.5pt) -- +(0.6\dg,0cm) -- +(0pt,-1.5pt);
-}
-\def\robotbase{%
-    \draw[thick](-0.5,0) rectangle (0.5,-0.3);
-    \draw[thick](-1,-0.3) -- (0.6,-0.3)  -- (0.85,-0.65) -- (0.6,-1) -- (-1,-1);
-	\draw[decorate, decoration={snake, segment length=0.43cm,amplitude=.9}] (-1,-0.3)  -- (-1,-1); 
-    \filldraw [fill=white, thick] (0.35,-0.9) circle (0.4);    
-    
-    \draw (-1.5,-\dh)-- (1.5,-\dh);
-    \fill[pattern=north east lines] (-1.5,-\dh) rectangle (1.5,-\dh-0.5);
-}
-
-% Draw an angle annotation
-% Input:
-%   #1 Offset (optional)
-%   #2 Angle
-%   #3 Label
-% Example:
-%   \angann{30}{$\theta_1$}
-\newcommand{\angann}[3][\ddx]{%
-    \begin{scope}[red]
-    \draw [dashed, red] (0,0) -- (1.2*#1,0pt);
-    \draw [->, shorten >=3.5pt] (#1,0pt) arc (0:#2:#1);
-    % Unfortunately automatic node placement on an arc is not supported yet.
-    % We therefore have to compute an appropriate coordinate ourselves.
-    \node at (#2/2-2:#1+8pt) {#3};
-    \end{scope}
-}
-
-% Draw line annotation
-% Input:
-%   #1 Line offset (optional)
-%   #2 Line angle
-%   #3 Line length
-%   #5 Line label
-% Example:
-%   \lineann[1]{30}{2}{$L_1$}
-\newcommand{\lineann}[4][0.5]{%
-    \begin{scope}[rotate=#2, blue,inner sep=2pt]
-        \draw[dashed, blue!40] (0,0) -- +(0,#1)
-            node [coordinate, near end] (a) {};
-        \draw[dashed, blue!40] (#3,0) -- +(0,#1)
-            node [coordinate, near end] (b) {};
-        \draw[|<->|] (a) -- node[fill=white] {#4} (b);
-    \end{scope}
-}
-
-% Draw view
-% Input:
-%   #1 Line offset (optional)
-%   #2 Line angle
-%   #3 Line length
-%   #5 Line label
-% Example:
-%   \lineann[1]{30}{2}{$L_1$}
-\newcommand{\view}[4]{%
-    \begin{scope}[rotate=#2, blue,inner sep=2pt]
-        \draw[dashed, blue!40] (0,0) -- +(0,#1)
-            node [coordinate, near end] (a) {};
-        \draw[dashed, blue!40] (#3,0) -- +(0,#1)
-            node [coordinate, near end] (b) {};
-        \draw[|<->|] (a) -- node[fill=white] {#4} (b);
-    \end{scope}
-}
+The mounting point of the RGB-D camera has been selected in place of an end-effector of the larger manipulator. This setting has allowed for reproducible and convenient adjustments of the camera pose. The Figure \ref{fig:fov} presents a simplified view of camera setting relative to the mobile platform. The manipulator is positioned in the plane compliant with the drawing and only the joints relevant to this plane are specified. The joint angles $\theta_1, \theta_2, \theta_3$ were experimentally selected to meet the previously mentioned requirements. The obtained values $\theta_1 = 22^o, \theta_2 = 22^o , \theta_3 = 22^o$,
+together with physical dimensions $L_0 = 22^o, L_1 = 22^o, L_2 = 22^o, L_3 = 22^o$
+allow to calculate the camera height $H$ as follows:
+$$ H = L_0 + L_1 sin(180^o-\theta_1)+L_2 sin(\theta_1 - \theta_2) + L_3 sin(\theta_1 - \theta_2 - \theta_3) = x $$
 
 
-% Define the kinematic parameters of the three link manipulator.
-\def\thetaone{120}
-\def\Lone{2}
-\def\thetatwo{-60}
-\def\Ltwo{2}
-\def\thetathree{-20}
-\def\Lthree{1}
+\input{fig/fieldofview}
 
-\begin{tikzpicture}
-    \lineann[1.5]{-90}{\dh}{$L_0$}
-    \robotbase
-    \angann[1.2cm]{\thetaone}{$\theta_1$}
-    \lineann[0.7]{\thetaone}{\Lone}{$L_1$}
-    \link(\thetaone:\Lone);
-    \joint
-    \begin{scope}[shift=(\thetaone:\Lone), rotate=\thetaone]
-        \angann{\thetatwo}{$\theta_2$}
-        \lineann[-0.5]{\thetatwo}{\Ltwo}{$L_2$}
-        \link(\thetatwo:\Ltwo);
-        \joint
-        \begin{scope}[shift=(\thetatwo:\Ltwo), rotate=\thetatwo]
-            \angann{\thetathree}{$\theta_3$}
-            \lineann[0.7]{\thetathree}{\Lthree}{$L_3$}
-            \draw [dashed, red,rotate=\thetathree] (0,0) -- (1.2\ddx,0pt);
-            \link(\thetathree:\Lthree);
-            \joint
-            \begin{scope}[shift=(\thetathree:\Lthree), rotate=\thetathree]
-                \grip
-                \begin{scope}[shift={(1.5mm,-\dg)}, rotate=-90]
-                \draw (0,0) -- (7,0);
-	            \end{scope}
-            \end{scope}
-        \end{scope}
-    \end{scope}
-\end{tikzpicture}
+Problem of high distance. Why such view: on a manipulator - easily adjusted, for future developments, manipulator angles => how to calc camera angle, angle - to see max closely to the front of the platform, and to be able to see objects of about 20x20 at 0.5 m.
 
+Image processing on the NVidia board? here or in the firs chap
 
 %---------------------------------------------------------------------------
 
-\section{Algorithm implementation}
-\label{sec:implementatnion}
+\section{Obstacle detection implementation}
+\label{sec:objavoid}
 
+Knowledge of the camera field of view facilitates the first stage of depth data processing, the obstacle detection. According to it, the view acquired from the sensor can be further adjusted to detect objects only in the designated area. The full, implemented processing pipeline, including this view adjustments, is presented in the Figure \ref{fig:detectpipe}.
+
+\begin{figure}[H]
+\begin{center}
+\begin{tikzpicture}
+  [node distance = 5mm,auto,every node/.style={rectangle,draw,align=center, font=\footnotesize}]
+  
+  \node (down) at (1,10) {Downsampling};
+  \node[right=of down] (plane) {Plane model \\ Extraction};
+  \node[right=of plane] (trans) {Affine \\ Transformation};
+  \node[right=of trans] (pass) {Passthrough \\ Filtering};
+  \node[right=of pass] (outlier) {Outlier \\ Removal};
+
+  \foreach \from/\to in {down/plane, plane/trans, trans/pass, pass/outlier}
+    \draw[->] (\from) -- (\to);
+
+\end{tikzpicture}
+
+\caption{Implemented obstacle detection pipeline}
+
+\label{fig:detectpipe}
+
+\end{center}
+\end{figure}
+
+Depth sensors provide a high volume of information, which has to be analysed online with a limited computing resources. Therefore, the first processing step was to reduce the amount of data by downsampling. For this purpose, a voxel filter with a leaf size of $1cm \times 1cm \times 1cm$ has been applied. Figure x illustrates an exemplary point cloud before and after filtration. The number of points has been reduced from $x$ to $y$. This step has significantly accelerated further processing stages, thus allowing a sufficiently fast response to obstacle emergence.
+
+FIGURE
+
+By design, the robot is intended to work in the indoor environment. A significant feature of such environment is the planar surface of the floor. Therefore, by fitting a plane model to the acquired point cloud, it is possible to determine the  area belonging to the ground, and thus free of obstacles. The RANSAC algorithm implementation, available in the PCL library, was used to estimate the plane model parameters $A,B,C,D$, given by Equation \ref{eq:planemodel}. Dobrane parametry? After the fitting, all of the model inliers are removed from the point cloud. This step thus leaves only the points that potentially belong to an obstacle. On the other hand, if the RANSAC algorithm fails to fit the model, it is assumed that the entire view is occluded by obstacles and the procedure returns positive detection.  The Figure x illustrates the point cloud from Figure x after plane model extraction.
+
+FIGURE
+
+The next processing step, the volume of interest (VoI) extraction, involves separation of a cuboidal space from the remaining point cloud. The dimensions of the extracted cuboid directly correspond to the total height and width of the robot, and the maximum distance at which the system is supposed to react to obstacles. As shown in Figure \ref{fig:fov}, the camera is pointing to the floor at a certain angle. This direction is represented by a Z-axis of the coordinate system in the acquired point cloud. To enable the VoI extraction with the specified dimensions, the coordinate system of the cloud is rotated by an angle $\theta$ around the X-axis, such that the Z-axis of the resultant coordinate frame is parallel to the floor. This transformation can be based on the angle $jakistam$, calculated in Section \ref{sec:setting}. However, because of the vibrations caused by the platform movement, a more accurate solution is to use the previously calculated plane model. A vector $\vec{n}$ normal to a plane \ref{eq:planemodel} is given by:
+\begin{equation}
+ \vec{n} = \frac{1}{\sqrt{A^2+B^2+C^2}} \cdot \left[
+\begin{array}{c}
+A\\
+B\\
+C\\
+\end{array}
+\right] 
+\end{equation}
+It can be shown, that the third coordinate $n_z$ of the normal vector $\vec{n}$ satisfies $n_z = sin(\theta)$ and the final rotation matrix is given by:
+
+\begin{equation}
+R_x=\left[\begin{array}{ccc}
+      1 & 0 & 0  \\
+      0 & \sqrt{1 - n_z^2} & -n_z  \\
+      0 & n_z & \sqrt{1 - n_z^2}  \\
+    \end{array}\right]
+\end{equation}
+After viewpoint transformation, the VoI is extracted by applying a Passthrough filter along X, Y and Z axes of the received cloud. The filtration ranges have been experimentally selected...
+
+The last stage of the obstacle detection processing is the outlier removal.  
+	
+
+%---------------------------------------------------------------------------
+
+\section{Object recognition implementation}
+\label{sec:detection}
+
+In addition to ensuring safe movement of the robot, previously described obstacles  detection pipeline also performs most of the necessary preprocessing steps for object recognition. Upon obstacle detection, the resulting point cloud contains points that belong only to the objects in the scene, thus further processing is directly applied to that cloud. 
+
+Two different approaches of object recognition were implemented during the project. The first one uses an analytical model of the objects shape and allows to recognize objects with simple geometric shapes, such as spheres or cylinders. The second, more general method is based on the objects detailed model, acquired during 3D scanning. Despite the differences, both of these approaches rely on the RANSAC estimator and share some common preprocessing steps, including the normal estimation and cluster segmentation.
+
+%---------------------------------------------------------------------------
+
+\section{Autonomous mode implementation}
+\label{sec:autonomy}
+
+
+\tikzset{
+    state/.style={
+           rectangle,
+           rounded corners,
+           draw=black, very thick,
+           minimum height=2em,
+           inner sep=2pt,
+           text centered,
+           },
+}
+
+\begin{figure}[H]
+\begin{centering}
+
+\begin{tikzpicture}[->,>=stealth']
+
+ % Position of MOVE 
+ % Use previously defined 'state' as layout (see above)
+ % use tabular for content to get columns/rows
+ % parbox to limit width of the listing
+ \node[state,
+  text width=3cm] (MOVE) 
+ {\begin{tabular}{l}
+  \textbf{MOVE}
+ \end{tabular}};
+  
+ 
+ % STATE QUERYREP
+ \node[state,
+  below right of=MOVE,
+  node distance=3cm, 	% distance to QUERY
+  %yshift=-2cm,
+  anchor=center,
+  text width=3cm] (STOP) 
+ {%
+ \begin{tabular}{l}
+  \textbf{STOP}
+ \end{tabular}
+ };
+ 
+ % State: TURN with different content
+ \node[state,    	% layout (defined above)
+  text width=3cm, 	% max text width
+  %yshift=2cm, 		% move 2cm in y
+  above right of=STOP, 	% Position is to the right of QUERY
+  node distance=3cm, 	% distance to QUERY
+  anchor=center] (TURN) 	% posistion relative to the center of the 'box'
+ {%
+ \begin{tabular}{l} 	% content
+  \textbf{TURN}
+ \end{tabular}
+ };
+
+ % draw the paths and and print some Text below/above the graph
+ \path (MOVE.north) 	edge[bend left=20]  node[anchor=south,above]{$SC_n=0$}
+                                    node[anchor=north,below]{$RN_{16}$} (TURN.north)
+ (MOVE)     	edge[bend right=20] node[anchor=south,above]{$SC_n\neq 0$} (STOP.west)
+ (STOP)  	edge[loop below] node[anchor=north,below]{$SC_n\neq 0$} (STOP)
+ (STOP.east)  	edge[bend right=20] node[anchor=left,right]{$SC_n = 0$} (TURN);
+
+\end{tikzpicture}
+
+\caption{State transition diagram}
+\label{fig:statetrans}
+
+\end{centering}
+\end{figure}
 
 %---------------------------------------------------------------------------
 
