--- a/6summary.tex
+++ b/6summary.tex
@@ -1,5 +1,6 @@
 \chapter*{Summary}
 \label{cha:summary}
+\markboth{Summary}{Summary}
 \addcontentsline{toc}{chapter}{Summary}  
 
 %---------------------------------------------------------------------------
