--- a/2rozdzial1.tex
+++ b/2rozdzial1.tex
@@ -25,20 +25,22 @@ Wide functionality of a MMS robot makes its design a challenging task. In MMS ro
 \section{Design requirements}
 \label{sec:require}
 
-Design requirements:
+In order to clarify the design process, the requirements that should be met by the final construction were defined. The main goals and features of the project are summarized in the following list:
+
 \begin{enumerate}
-\item The robotic system should consist of two cooperating serial manipulators, based on a wheeled robotic platform.
-\item The whole construction should be made of easily accessible components, preferably available on the consumer market, as it would ease the maintenance of the equipment in the future.
-\item Both serial manipulators should be equiped with grippers for general object manipulation.
-\item Their reachable workspace should allow to reach objects located on the ground.
-\item The workspace of each manipulator should also intersect, to allow collaboration on manipulation tasks.
-\item The steering mechanisms of the MMS chassis should be kept simple and convenient to control.
-\item The platform is expected to move only on flat surfaces at indoor areas.
-\item The MMS robot should possess a control server, that is expected to provide a web interface, developed in a commonly used and well supported standard.
-\item That interface is required to provide methods for setting positions on manipulator joints, for setting speed of achieving those positions, and for setting velocity and direction of platform movement. 
-\item Processing power of the computing unit should be sufficient to analyse camera images in an online fashion. 
+\item The robotic system should consist of two cooperating serial manipulators, based on a common mobile robotic platform.
+\item The whole construction should be assembled from easily accessible components, available on the consumer market.
+\item The serial manipulators should be equipped with grippers for general object manipulation.
+\item The manipulators reachable workspace should allow to reach objects located on the ground.
+\item The reachable workspace of each manipulator should also intersect, to allow collaboration on manipulation tasks.
+\item The mobile platform should be wheeled and is expected to move only on flat surfaces at indoor areas.
+\item The steering mechanism of the robot chassis should be kept simple and convenient to control.
+\item The robotic system is expected to provide an interface for remote control, developed in a commonly used and well supported standard.
+\item The control interface of the robot is required to provide methods for manipulator joints positioning and for setting velocity and direction of the platform movement. 
 \item The whole system should be powered by a source that could withstand at least an hour of continuous work.
 \end{enumerate}
+
+Furthermore, as the robot is intended for autonomous operation, it should possess a vision based data acquisition system and a computing unit with enough processing power to analyse the acquired data in an online fashion.
 
 \begin{comment}
 In robotics a serial manipulator is a device used to manipulate objects. It consists of a kinematic chain with actuated joints. The type of the joint can be prismatic or revolute, correspondingly allowing for either rotational or transational motion. The last link of the chain is called an end-effector, which is used to interact with the environment.
@@ -102,19 +104,46 @@ Industry - conservative, environment can be known, all required technology exist
 \section{Hardware components}
 \label{sec:hard}
 
-Mechanical structure:
+The first stage of the project was to create the mechanical construction of the robot, which would satisfy the established requirements. The obtained model is shown in the Figure \ref{fig:model}. The robot consists of two serial manipulators with 5 degrees of freedom (DoF). Both of the robotic arms are in the articulated structural configuration and possess only rotational joints. The link lengths for each manipulator are presented in the Table \ref{tab:dimensions}. Both manipulators possess impactive grippers, which open about \SI{50}{\milli\meter} wide.
+
+The manipulators are based on a four wheeled mobile platform. To avoid complicating the mechanical design of the chassis with a steering mechanism, a special kind of wheels were used. Mecanum wheels [wikipedia], as they are called, are equipped with a set of rollers attached to their circumference, which allow a vehicle to move in any direction without turning the wheels. By alternating wheels with left and right-handed rollers, in such a way that each wheel applies force roughly at right angles to the wheelbase diagonal the wheel is on, the vehicle is stable and can be made to move in any direction and turn by varying the speed and direction of rotation of each wheel. Moving all four wheels in the same direction causes forward or backward movement, running the wheels on one side in the opposite direction to those on the other side causes rotation of the vehicle, and running the wheels on one diagonal in the opposite direction to those on the other diagonal causes sideways movement. Combinations of these wheel motions allow for vehicle motion in any direction with any vehicle rotation.
 
 \begin{figure}[H]
 \centering
 \includegraphics[trim=21cm 5cm 18cm 5cm, clip=true, totalheight=0.5\textheight]{fig/model}
 \caption{Model}
+\label{fig:model}
 \end{figure}
 
-The MPTM robot consists of two robotic arms based on a simple four-wheeled mobile platform. Both of robotic arms have 5 degrees of freedom and are in articulated structural configuration. To avoid complicating the mechanical design of the chassis with a steering mechanism, a special kind of wheels were used. Mecanum wheels, as they are called, are equipped with a set of rollers attached to their circumference, which allow a vehicle to move in any direction without turning the wheels. 
+The MPTM robot consists of two robotic arms based on a simple four-wheeled mobile platform. Both of robotic arms have 5 degrees of freedom and are in articulated structural configuration. 
 
-By alternating wheels with left and right-handed rollers, in such a way that each wheel applies force roughly at right angles to the wheelbase diagonal the wheel is on, the vehicle is stable and can be made to move in any direction and turn by varying the speed and direction of rotation of each wheel. Moving all four wheels in the same direction causes forward or backward movement, running the wheels on one side in the opposite direction to those on the other side causes rotation of the vehicle, and running the wheels on one diagonal in the opposite direction to those on the other diagonal causes sideways movement. Combinations of these wheel motions allow for vehicle motion in any direction with any vehicle rotation.
 
-Another advantage of such design is increased stability of the platform.
+
+\begin{table}[h]
+
+\begin{center}
+
+\begin{tabular}{r||l}
+\hline
+Manipulator dimensions  (smaller)    & 20x20 \\
+
+\hline
+Manipulator dimensions  (bigger)        & \SI{58}{\degree H}, \SI{45}{\degree V}, \SI{70}{\degree D} \\
+
+\hline
+Depth map resolution & \begin{tabular}[c]{@{}l@{}}VGA (640x480) : 30 fps\\ QVGA (320x240): 60 fps\end{tabular} \\
+
+\hline
+Interface            & USB2.0/ 3.0                                                                             \\
+
+\hline
+Dimensions           &  18 x 3.5 x 5 cm  \\ \hline
+\end{tabular}
+\caption{Asus Xtion Pro Live specification}
+\label{tab:dimensions}
+\end{center}
+\end{table}
+
 
 Basic components:
 
