--- a/3rozdzial2.tex
+++ b/3rozdzial2.tex
@@ -107,7 +107,7 @@ ToF cameras, due to their specific architecture, are prone to errors caused by r
 \label{fig:tof}
 \centering
 \includegraphics[width=0.7\textwidth]{fig/tofprinciple}
-\caption{ToF principle}
+\caption{ToF principle [??]}
 \end{figure}
 
 Rewrite this. The simplest version of a time-of-flight camera uses light pulses or a single light pulse. The illumination is switched on for a very short time, the resulting light pulse illuminates the scene and is reflected by the objects in the field of view. The camera lens gathers the reflected light and images it onto the sensor or focal plane array. Depending upon the distance, the incoming light experiences a delay. As light has a speed of approximately c = 300,000,000 meters per second, this delay is very short: an object 2.5 m away will delay the light by 16 ns.
