--- a/praca.tex
+++ b/praca.tex
@@ -101,7 +101,7 @@
 % \include{dodatekB}
 % itd.
 
-\bibliographystyle{alpha}
+\bibliographystyle{ieeetr}
 \bibliography{bibliografia}
 %\begin{thebibliography}{1}
 %
