--- a/2rozdzial1.tex
+++ b/2rozdzial1.tex
@@ -104,55 +104,53 @@ Industry - conservative, environment can be known, all required technology exist
 \section{Hardware components}
 \label{sec:hard}
 
-The first stage of the project was to create the mechanical construction of the robot, which would satisfy the established requirements. The obtained model is shown in the Figure \ref{fig:model}. The robot consists of two serial manipulators with 5 degrees of freedom (DoF). Both of the robotic arms are in the articulated structural configuration and possess only rotational joints. The link lengths for each manipulator are presented in the Table \ref{tab:dimensions}. Both manipulators possess impactive grippers, which open about \SI{50}{\milli\meter} wide.
+The first stage of the project was to create the mechanical construction of the robot, which would satisfy the established requirements. The obtained model is shown in the Figure \ref{fig:model}.  The robot consists of two serial manipulators with 5 degrees of freedom (DoF). Both of the robotic arms are in the articulated structural configuration and possess only rotational joints. The link lengths for each manipulator are presented in the Table \ref{tab:dimensions}. Both of the manipulators possess impactive grippers, which open to about \SI{50}{\milli\meter} wide.
 
-The manipulators are based on a four wheeled mobile platform. To avoid complicating the mechanical design of the chassis with a steering mechanism, a special kind of wheels were used. Mecanum wheels [wikipedia], as they are called, are equipped with a set of rollers attached to their circumference, which allow a vehicle to move in any direction without turning the wheels. By alternating wheels with left and right-handed rollers, in such a way that each wheel applies force roughly at right angles to the wheelbase diagonal the wheel is on, the vehicle is stable and can be made to move in any direction and turn by varying the speed and direction of rotation of each wheel. Moving all four wheels in the same direction causes forward or backward movement, running the wheels on one side in the opposite direction to those on the other side causes rotation of the vehicle, and running the wheels on one diagonal in the opposite direction to those on the other diagonal causes sideways movement. Combinations of these wheel motions allow for vehicle motion in any direction with any vehicle rotation.
 
 \begin{figure}[H]
 \centering
-\includegraphics[trim=21cm 5cm 18cm 5cm, clip=true, totalheight=0.5\textheight]{fig/model}
+\includegraphics[trim=21cm 5cm 18cm 5cm, clip=true, totalheight=0.3\textheight]{fig/model}
 \caption{Model}
 \label{fig:model}
 \end{figure}
 
-The MPTM robot consists of two robotic arms based on a simple four-wheeled mobile platform. Both of robotic arms have 5 degrees of freedom and are in articulated structural configuration. 
 
+The manipulators are based on a four wheeled mobile platform. To avoid complicating the mechanical design of the chassis with a steering mechanism, a special kind of wheels were used. Mecanum wheels [wikipedia], as they are called, are equipped with a set of rollers attached to their circumference at a \SI{45}{\degree} angle, which allow a vehicle to move in any direction without turning the wheels. To achieve the desired steering, the wheels are independently actuated, in a way that the resultant force vectors move or rotate the entire platform in a specified direction. In addition, such mechanism increases the stability of the entire platform, which is particularly important during the manipulation tasks. The physical dimensions of the mobile platform are also provided in the Table \ref{tab:dimensions}. The entire mechanical structure has been laser cut from aluminium sheets of \SI{1.5}{}, \SI{2}{} and \SI{4}{\milli\meter} thickness.
 
-
-\begin{table}[h]
+\begin{table}[H]
 
 \begin{center}
 
 \begin{tabular}{r||l}
 \hline
-Manipulator dimensions  (smaller)    & 20x20 \\
+Manipulator links  (smaller)    & 20x20 \\
 
 \hline
-Manipulator dimensions  (bigger)        & \SI{58}{\degree H}, \SI{45}{\degree V}, \SI{70}{\degree D} \\
+Manipulator links  (bigger)        & \SI{58}{\degree H}, \SI{45}{\degree V}, \SI{70}{\degree D} \\
 
 \hline
-Depth map resolution & \begin{tabular}[c]{@{}l@{}}VGA (640x480) : 30 fps\\ QVGA (320x240): 60 fps\end{tabular} \\
+Mobile platform & VGA (640x480) \\
 
 \hline
-Interface            & USB2.0/ 3.0                                                                             \\
-
-\hline
-Dimensions           &  18 x 3.5 x 5 cm  \\ \hline
 \end{tabular}
-\caption{Asus Xtion Pro Live specification}
+\caption{The MMS robot dimensions}
 \label{tab:dimensions}
 \end{center}
 \end{table}
 
 
-Basic components:
+The next step in the construction of the MMS robot required a selection of hardware components, such as the actuators, power supply, embedded computing units and control electronics. The Figure \ref{fig:hardware} presents a categorized diagram of the selected elements. 
+
+The MMS robot utilises two types of actuators, four DC motors for each of the mobile platform wheels and the servomechanisms for manipulator joints. The selected DC motors are the Pololu 1444 [datasheet] with 50:1 metal gearboxes. They achieve \SI{200}{RPM} of no-load speed and \SI{12}{\kilogram \centi\metre} of stall current. Additionally, they possess 64 CPR encoders, which multiplied by the gear ratio provide a total of 3200 counts per revolution. The type of servomechanism used for each joint, is the Turnigy 1269HV [datasheet], with titanium gears and a total stall torque of \SI{21}{\kilogram \centi\metre}. Both types of actuators are driven by the Pulse Width Modulation signal (PWM). In case of the DC motors, the PWM signal is provided by a dedicated motor driver board, named Rover 5 [datasheet]. This controller provides four low-resistance FET H-bridges, together with current monitoring on each motor channel. To generate the PWM signal for servomechanisms positioning, a 16-channel PWM driver chip, the PCA9685 [datasheet] was used. This driver has an I2C interface for setting a PWM signal on a selected channel with a 12-bit resolution.
 
 \tikzset{
-  basic/.style  = {draw, drop shadow, font=\sffamily, font=\footnotesize, rectangle,text centered, minimum size=2.2cm,minimum height=0.5cm},
-  root/.style   = {basic, thin, align=center, fill=blue!25},
-  level 2/.style = {basic, thin,align=center, fill=blue!30},
-  level 3/.style = {basic, thin, align=center, fill=blue!35}
+  basic/.style  = {draw, font=\sffamily, font=\footnotesize, rectangle,text centered, minimum size=2.2cm,minimum height=0.5cm},
+  root/.style   = {basic, thin, align=center},
+  level 2/.style = {basic, thin,align=center},
+  level 3/.style = {basic, thin, align=center}
 }
+
+
 \begin{figure}[H]
 \centering
 \begin{tikzpicture}[
@@ -180,11 +178,12 @@ Basic components:
 \node [below of = c22] (c23) {Servo controller\\ PCA9685};
 
 \node [below of = c3, xshift=15pt] (c31) {Raspberry Pi};
-\node [below of = c31] (c32) {NVidia Jetson};
+\node [below of = c31] (c32) {NVIDIA \\ Jetson TK1};
 
 
 \node [below of = c4, xshift=15pt] (c41) {Li-Poly battery \\ 8S 5.8Ah};
-\node [below of = c41] (c42) {DC-DC converter};
+\node [below of = c41] (c42) {DC-DC converters};
+\node [below of = c42, yshift=6pt] (c43) {Battery monitor};
 
 
 \node [below of = c5, xshift=15pt] (c51) {Asus Xtion sensor};
@@ -200,30 +199,28 @@ Basic components:
 \foreach \value in {1,...,2}
   \draw[->] (c3.195) |- (c3\value.west);
   
-\foreach \value in {1,...,2}
+\foreach \value in {1,...,3}
   \draw[->] (c4.195) |- (c4\value.west);
   
 \foreach \value in {1,...,1}
   \draw[->] (c5.195) |- (c5\value.west);
 \end{tikzpicture}
 
-\caption{Components}
+\caption{Hardware components}
+\label{fig:hardware}
 \end{figure}
 
-The MPTM robot utilises two types of actuators, 4 DC motors for the mobile platform wheels and 12 servomechanisms for manipulator joints. 
-All DC motors have 50:1 metal gearboxes. They achieve 200 RPM of no-load speed and 12 kg cm of stall current. Additionally, they possess 64 CPR encoders, which multiplied by the gear ratio provide 3200 counts per revolution.
+The main computing unit, used for hosting the control server and directly interfacing with the actuator drivers, is the model B of Raspberry Pi development platform [datasheet]. This board is equipped with 700Mhz ARM11 family CPU, 512 MB of RAM and a set of GPIO ports with hardware UART, I2C and SPI interfaces. The MMS robot utilises an additional processing unit, with a much larger computing power for the vision system implementation. The NVIDIA Jetson TK1 [datasheet] development board is based on the Tegra K1 System-on-Chip, that includes a quad-core 2.3 GHz ARM Cortex-A15 CPU, 2 GB of RAM, and a NVIDIA Kepler GPU with 192 CUDA cores, capable of performing over 300 GFLOPS of 32-bit floating point computations. This board provides a similar performance to a modern desktop GPU, while maintaining relatively low power consumption, which makes it a perfect match for image processing applications in mobile systems, such as the MMS robot.
 
-Servomechanisms used are Turnigy 1269HV, with operating speed of 
+The whole system is powered by a lithium-polymer, 8 cell battery with a nominal voltage of \SI{29.6}{\volt} and a capacity of \SI{5.8}{\ampere\hour}. Due to the specific nature of a lithium-polymer battery, each of its cells has to be protected against excessive discharge. For this purpose, a cell voltage monitor is connected to the battery, which generates a sound alarm if the voltage falls below a selected threshold. To integrate different operating voltages for the individual components, three DC-DC voltage converters are applied in the power system: one with \SI{6}{\volt} output and maximal current of \SI{20}{\ampere} for supplying all of the actuators, one with the output of \SI{12}{\volt} and \SI{4}{\ampere} max. for the NVIDIA Jetson board, and a \SI{5}{\volt} and \SI{4}{\ampere} max. for feeding the Raspberry Pi and the actuator drivers.
 
-Actuators are driven by PWM signal generated by MSP430G2553 microcontrollers, one for each of manipulators and one for the mobile platform.
-
-End effect:
-
+The final construction result in the form of the whole, assembled MMS robot is  is presented in the Figure \ref{fig:assembled}.
 
 \begin{figure}[H]
 \centering
-\includegraphics[trim=15cm 18cm 28cm 10cm, clip=true, totalheight=0.4\textheight]{fig/robot}
-\caption{Construction}
+\includegraphics[trim=15cm 18cm 28cm 10cm, clip=true, totalheight=0.3\textheight]{fig/robot}
+\caption{The final effect of the MMS robot construction}
+\label{fig:assembled}
 \end{figure}
 %---------------------------------------------------------------------------
 
@@ -234,22 +231,22 @@ End effect:
 \begin{figure}[H]
 \begin{center}
 \begin{tikzpicture}
-  [auto,every node/.style={rectangle,draw,align=center, font=\footnotesize}]
+  [auto,every node/.style={align=center, font=\footnotesize}]
   
-  \node (manual) at (1,10) {Manual controller \\ (Android, PC)};
-  \node[below right=of manual] (raspberry) {Control Server \\ (Raspberry Pi)};
-  \node[below left=of raspberry] (auto) {Autonomous mode \\ (NVIDIA Jetson TK1)};
-  \node[above right=of raspberry] (servo) {Servocontroller \\ (PCA9685)};
-  \node[below right=of raspberry] (motor) {Motor controller \\ (Rover 5)};
+  \node[draw,rectangle] (manual) at (1,10) {\textbf{Manual controller} \\ (Android, PC)};
+  \node[draw,circle,below right=of manual, font=\small, yshift=30pt, xshift=30pt] (raspberry) {\textbf{Control Server} \\ (Raspberry Pi)};
+  \node[draw,rectangle,below left=of raspberry, yshift=45pt, xshift=-30pt] (auto) {\textbf{Autonomous mode} \\ (NVIDIA Jetson TK1)};
+  \node[draw,rectangle,above right=of raspberry, yshift=-30pt, xshift=30pt] (servo) {\textbf{Servocontroller} \\ (PCA9685)};
+  \node[draw,rectangle,below right=of raspberry, yshift=45pt, xshift=30pt] (motor) {\textbf{Motor controller} \\ (Rover 5)};
   %\node[draw=none,fill=none, node distance=2mm, above=of match1](ann1) {\small Recognition Pipeline for Local Descriptors};
 
   % draw the paths and and print some Text below/above the graph
- \path (manual.east) 	edge[bend left=20]  node[anchor=south,above]{$SC_n=0$}
-                                    node[anchor=north,below]{$RN_{16}$} (raspberry.west)
-(auto.east) 	edge[bend left=20]  node[anchor=south,above]{$SC_n=0$}
-                                    node[anchor=north,below]{$RN_{16}$} (raspberry.west)
- (raspberry.east)     	edge[bend right=20] node[anchor=south,above]{$SC_n\neq 0$} (motor.west)
- (raspberry.east)  	edge[bend right=20] node[anchor=left,right]{$SC_n = 0$} (servo);
+ \path (manual) 	edge[->]  node[anchor=south,above]{HTTP}
+                                    node[anchor=north,below]{WiFi} (raspberry)
+(auto) 	edge[->]  node[anchor=south,above]{HTTP}
+                                    node[anchor=north,below]{Ethernet} (raspberry)
+ (raspberry)     	edge[->] node[anchor=south,above]{PWM} (motor)
+ (raspberry)  	edge[->] node[anchor=south,above]{I2C} (servo);
 
 
 
